Начало разработки - создание основных моделей, контроллеров, миграций

--- a/public/media/bootstrap/css/style.css
+++ b/public/media/bootstrap/css/style.css
@@ -1,5 +1,5 @@
 html, body {
-    background: url("../../img/bg.png") #2b2b2b no-repeat center fixed;
+    background: url("../../img/bg.jpg") #2b2b2b no-repeat center fixed;
     background-size: 100% auto;
 }
 .fixed-logo {
