--- a/public/media/bootstrap/css/style.css
+++ b/public/media/bootstrap/css/style.css
@@ -2,6 +2,13 @@ html, body {
     background: url("../../img/bg.jpg") #2b2b2b no-repeat center fixed;
     background-size: 100% auto;
 }
+a {
+    color: #ffa820;
+    font-size: 100%;
+}
+a:hover {
+    color: #b17c2a;
+}
 .fixed-logo {
     position: fixed;
     height: 100px;
@@ -43,6 +50,16 @@ main section article {
     color: #f2f2f2;
     font-size: 120%;
     padding: 20px;
+}
+main section article img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: .5s;
+}
+main section article .image-post {
+    width: 100%;
+    height: 200px;
 }
 
 main aside section {
@@ -119,5 +136,15 @@ footer .copyright {
 .btn-orange {
     color:#000;
     background-color:#fd7e14;
-    border-color:#5cb377;
+}
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: none;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .25rem;
 }
