--- a/public/media/bootstrap/css/style.css
+++ b/public/media/bootstrap/css/style.css
@@ -66,8 +66,9 @@ main section article .image-post {
 }
 main section article .first-image-post {
     max-width: 100%;
-    min-height: 200px;
-    max-height: 300px;
+    min-height: 300px;
+    max-height: 500px;
+    overflow: hidden;
 }
 
 main aside section {
